--- a/入门关卡——第2关作业.md
+++ b/入门关卡——第2关作业.md
@@ -8,7 +8,7 @@
 
 ### 内容一
 
-![替代文本](images/2024-11-10 20-07-15.png “image1”)
+![替代文本](https://github.com/Victory-7291/AI_Lab/blob/main/images/2024-11-10%2020-07-15.png “image1”)
 
 - 列表项一
 - 列表项二
