--- a/入门关卡——第2关作业.md
+++ b/入门关卡——第2关作业.md
@@ -1,14 +1,16 @@
-# 大标题
+# 入门岛——第3关作业
 
-这是一个 Markdown 文档的示例。
 
-## 小标题一
 
-这是第一个小标题的内容。
+## 1: 破冰活动：自我介绍
 
-### 内容一
+### 
 
-![替代文本](https://github.com/Victory-7291/AI_Lab/blob/main/images/2024-11-10%2020-07-15.png “image1”)
+![error](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-07-15.png "image1")
+
+![error](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-07-15.png "image1")
+
+![替代文本](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-07-15.png "image1")
 
 - 列表项一
 - 列表项二
