--- a/入门关卡——第3关作业.md
+++ b/入门关卡——第3关作业.md
@@ -1,37 +1,48 @@
-# 入门岛——第3关作业
+# 入门岛——第3关作业  
+<br>
 
-
-
+    
 ## 1: 破冰活动：自我介绍
+<br>
+### 
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-07-15.png" width="400" height="90" alt="描述">
 
+  
+-------------------------------------------------------------------------------------------------------------------
+
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-08-36.png" width="400" height="250" alt="描述">   
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-09-13.png" width="400" height="250" alt="描述">
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+## 2: 实践项目：构建个人项目
+<br>
 ### 
 
-![error](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-07-15.png "image1")
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-51-19.png" width="550" height="300" alt="描述">
 
-![error](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-08-36.png "image1")
 
-![替代文本](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-09-13.png "image1")
+-------------------------------------------------------------------------------------------------------------------
 
-- 列表项一
-- 列表项二
-- 列表项三
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2021-16-11.png" width="550" height="250" alt="描述">
 
-## 小标题二
 
-这是第二个小标题的内容。
+-------------------------------------------------------------------------------------------------------------------
 
-### 内容二
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2021-15-30.png" width="400" height="200" alt="描述">
 
-这里也可以写更多的文本内容，比如段落、强调文本等。
 
-**这是粗体文本**
+-------------------------------------------------------------------------------------------------------------------
 
-*这是斜体文本*
-
-`这是一段代码`
-
-## 图片
-
-以下是一个插入图片的例子。请确保图片文件已经上传到你的 GitHub 仓库，或者使用一个有效的图片 URL。
-
-![替代文本](图片链接 "可选的标题")
+  
