--- a/入门关卡——第4关作业.md
+++ b/入门关卡——第4关作业.md
@@ -1,1 +1,68 @@
 
+# 入门岛——第3关作业  
+
+    
+## 1：模型下载
+### 
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-07-15.png" width="400" height="90" alt="描述">
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-08-36.png" width="400" height="250" alt="描述">   
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-09-13.png" width="400" height="250" alt="描述">
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+## 2: 模型上传
+### 
+
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-51-19.png" width="550" height="300" alt="描述">
+
+
+-------------------------------------------------------------------------------------------------------------------
+
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2021-16-11.png" width="550" height="250" alt="描述">
+
+
+-------------------------------------------------------------------------------------------------------------------
+
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2021-15-30.png" width="400" height="200" alt="描述">
+
+
+-------------------------------------------------------------------------------------------------------------------
+
+  
+## 2: 上传space
+### 
+
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-51-19.png" width="550" height="300" alt="描述">
+
+
+-------------------------------------------------------------------------------------------------------------------
+
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2021-16-11.png" width="550" height="250" alt="描述">
+
+
+-------------------------------------------------------------------------------------------------------------------
+
+  
+<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2021-15-30.png" width="400" height="200" alt="描述">
+
+
+-------------------------------------------------------------------------------------------------------------------
+
+  
