--- a/入门关卡——第4关作业.md
+++ b/入门关卡——第4关作业.md
@@ -1,68 +1,70 @@
-
 # 入门岛——第3关作业  
 
     
 ## 1：模型下载
 ### 
-<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-07-15.png" width="400" height="90" alt="描述">
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-  
-<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-08-36.png" width="400" height="250" alt="描述">   
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-  
-<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-09-13.png" width="400" height="250" alt="描述">
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-12%20223342.png "2024-11-12%20223342.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-## 2: 模型上传
-### 
-
-  
-<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-51-19.png" width="550" height="300" alt="描述">
-
-
--------------------------------------------------------------------------------------------------------------------
-
-  
-<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2021-16-11.png" width="550" height="250" alt="描述">
-
-
--------------------------------------------------------------------------------------------------------------------
-
-  
-<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2021-15-30.png" width="400" height="200" alt="描述">
-
-
--------------------------------------------------------------------------------------------------------------------
-
-  
 ## 2: 上传space
 ### 
+在hugging face平台生成tokens,并在终端使用tokens登录hugging face
 
   
-<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2020-51-19.png" width="550" height="300" alt="描述">
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-12%20230526.png "2024-11-12%20230526.png")
 
 
 -------------------------------------------------------------------------------------------------------------------
 
+
+创建space并git clone到本地
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-12%20231043.png?raw=true "2024-11-12%20231043.png")
+
   
-<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2021-16-11.png" width="550" height="250" alt="描述">
+-------------------------------------------------------------------------------------------------------------------
+
+
+修改index.html文件并同步到hugging face远程空间
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-12%20231304.png?raw=true "2024-11-12%20231304.png")
 
 
 -------------------------------------------------------------------------------------------------------------------
 
+
+打开hugging face的space
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-12%20231333.png?raw=true "2024-11-12%20231333.png")
+
+## 2: 上传模型
+### 
+
+
+使用huggingface-cli repo create命令创建一个模型仓库，并clone到本地,加入config.json和readme.md
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-12%20231917.png?raw=true "2024-11-12%20231917.png")
+
   
-<img src="https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-10%2021-15-30.png" width="400" height="200" alt="描述">
+-------------------------------------------------------------------------------------------------------------------
 
 
+同步
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-13%20221432.png?raw=true "2024-11-13%20221432.png")
+
+
+-------------------------------------------------------------------------------------------------------------------
+
+
+查看model card
+
+![erro](https://github.com/Victory-7291/AI_Lab/blob/main/images/2024-11-13%20221541.png?raw=true "2024-11-13%20221541.png")
+
+  
 -------------------------------------------------------------------------------------------------------------------
 
   
