--- a/基础关卡——第2关作业.md
+++ b/基础关卡——第2关作业.md
@@ -1,1 +1,4 @@
-https://www.zhihu.com/question/1915470960/answer/35375186914
+
+问题：2024 年诺贝尔物理学奖为何会颁发给人工智能领域，这一举动对这两个领域的从业人员会有什么影响？
+
+回答：https://www.zhihu.com/question/1915470960/answer/35375186914
