--- a/基础关卡——第2关作业.md
+++ b/基础关卡——第2关作业.md
@@ -2,3 +2,37 @@
 问题：2024 年诺贝尔物理学奖为何会颁发给人工智能领域，这一举动对这两个领域的从业人员会有什么影响？
 
 回答：https://www.zhihu.com/question/1915470960/answer/35375186914
+# 入门岛——第3关作业  
+
+    
+## 基础任务：
+### 1 MindSearch开源的 AI 搜索引擎:
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-12%20223342.png "2024-11-12%20223342.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+
+### 2 书生·浦语InternLM: 
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-12%20230526.png "2024-11-12%20230526.png")
+
+
+-------------------------------------------------------------------------------------------------------------------
+
+
+### 3 书生·万象InternVL: 
+
+
+使用huggingface-cli repo create命令创建一个模型仓库，并clone到本地,加入config.json和readme.md
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-12%20231917.png?raw=true "2024-11-12%20231917.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+## 进阶任务:
+###
