--- a/基础关卡——第2关作业.md
+++ b/基础关卡——第2关作业.md
@@ -7,7 +7,7 @@
     
 ## 基础任务：
 ### 1 MindSearch开源的 AI 搜索引擎:
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-12%20223342.png "2024-11-12%20223342.png")
+![erro]("2024-11-12%20223342.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
