--- a/基础关卡——第4关作业.md
+++ b/基础关卡——第4关作业.md
@@ -1,1 +1,31 @@
 
+# 基础关卡——第4关作业
+
+    
+## 基础任务：
+### 1 API+LlamaIndex:
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-19%2012-45-59.png "2024-11-19%2012-45-59.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+
+### 2 本地InternLM+LlamaIndex: 
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-19%2015-16-48.png "2024-11-19%2015-16-48.png")
+
+
+-------------------------------------------------------------------------------------------------------------------
+
+
+### 3 Streamlit+LlamaIndex+API部署HuggingFace: 
+
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-18%2021-38-53.png "2024-11-18%2021-38-53.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
