--- a/基础关卡——第4关作业.md
+++ b/基础关卡——第4关作业.md
@@ -11,12 +11,10 @@
 
 
 
-### 2 本地InternLM+LlamaIndex: 
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-19%2015-16-48.png "2024-11-19%2015-16-48.png")
+### 2 (选做）本地InternLM+LlamaIndex: 
 
 
+因为没有开发机gpu配额，无法创建30% A100的开发机，10% A100无法加载模型
 -------------------------------------------------------------------------------------------------------------------
 
 
