--- a/基础关卡——第6关作业.md
+++ b/基础关卡——第6关作业.md
@@ -1,1 +1,65 @@
+# 基础关卡——第4关作业
 
+    
+## 基础任务：
+
+
+不使用LlamaIndex:
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2010-52-40.png "2024-11-20%2010-52-40.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+  
+使用LlamaIndex:
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2016-23-28.png "2024-11-20%2016-23-28.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+因为没有开发机gpu配额，无法创建30% A100的开发机，10% A100无法加载模型
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+在Huggingface中创建了名为InternLM_api_llamaindex_RAG的space，并git clone到开发机<br>
+把app.py,data复制到仓库中
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-42-15.png "2024-11-20%2021-42-15.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+编写requirements.txt
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-42-31.png "2024-11-20%2021-42-31.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+git push到space
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-43-08.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+Running
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-43-50.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
