--- a/基础关卡——第6关作业.md
+++ b/基础关卡——第6关作业.md
@@ -1,65 +1,92 @@
-# 基础关卡——第4关作业
+# 基础关卡——第6关作业
 
     
 ## 基础任务：
 
 
-不使用LlamaIndex:
+按照教程配置环境，准备数据，模型，然后修改config文件：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2010-52-40.png "2024-11-20%2010-52-40.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-  
-使用LlamaIndex:
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2016-23-28.png "2024-11-20%2016-23-28.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2010-50-52.png "2024-11-20%2010-52-40.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
+  
+启动微调：
 
-因为没有开发机gpu配额，无法创建30% A100的开发机，10% A100无法加载模型
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2010-51-16.png "2024-11-20%2016-23-28.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-在Huggingface中创建了名为InternLM_api_llamaindex_RAG的space，并git clone到开发机<br>
-把app.py,data复制到仓库中
+因为把max_length=4096,batch_size=3导致了内存溢出：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-42-15.png "2024-11-20%2021-42-15.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-编写requirements.txt
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-42-31.png "2024-11-20%2021-42-31.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2011-10-31.png "2024-11-20%2021-42-15.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-git push到space
+max_length=2048,batch_size=2微调成功：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-43-08.png "2024-11-20%2021-43-08.png")
+![erro](https://github.com/Victory-7291/AI_Lab/blob/main/images/2024-11-23%2011-16-58.png "2024-11-20%2021-42-31.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-Running
+微调完成：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-43-50.png "2024-11-20%2021-43-50.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2017-28-07.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+权重转换：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-34-01.png "2024-11-20%2021-42-31.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+得到huggingface格式的权重文件
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-33-39.png "2024-11-20%2021-42-15.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+模型合并，将微调得到的adapter层跟原模型文件合并：
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-41-44.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+修改xtuner_streamlit_demo.py：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-44-20.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+运行：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2023-26-31.png "2024-11-20%2021-43-50.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
