--- a/基础关卡——第6关作业.md
+++ b/基础关卡——第6关作业.md
@@ -90,3 +90,40 @@ max_length=2048,batch_size=2微调成功：
 
   
 -------------------------------------------------------------------------------------------------------------------
+
+
+创建模型仓库和space，并clone到开发机
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2022-15-47.png "2024-11-20%2021-42-31.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+上传模型文件：
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-59-29.png "2024-11-20%2021-42-15.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+修改streamlit文件的模型路径<br>from transformer import AutoTokenizer,AutoModelForCausalLM<br>
+模型路径为“hf_usrname/model_name”
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-55-49.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+git push到space<br>build and deploy<br>没有gpu导致runtime error,gpu需要美元，没有美元。。。
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-58-10.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
