--- a/基础关卡——第6关作业.md
+++ b/基础关卡——第6关作业.md
@@ -92,6 +92,10 @@ max_length=2048,batch_size=2微调成功：
 -------------------------------------------------------------------------------------------------------------------
 
 
+## 进阶任务：
+
+
+
 创建模型仓库和space，并clone到开发机
 
   
