--- a/进阶关卡——第3关作业.md
+++ b/进阶关卡——第3关作业.md
@@ -1,1 +1,90 @@
 
+# 进阶关卡——第3关作业
+
+    
+## 基础任务：
+### 1 ：<br>   W4A16量化与kv cache量化的internlm2_5-1_8b-chat模型封装本地API并与大模型进行一次对话
+
+
+
+    应用场景：
+        KV Cache int4/int8量化主要用于优化KV Cache结构中的键和值的存储和访问。
+        W4A16量化通常用于整个模型的权重和激活值。
+
+    量化粒度：
+        KV Cache int4/int8量化可以应用于键和值，而W4A16量化是针对权重和激活值的。
+
+    精度与效率的权衡：
+        W4A16量化通过使用更多的位来表示激活值，提供了比KV Cache int4/int8量化更高的精度。
+        KV Cache int4/int8量化更注重减少存储需求和加速访问，可能会牺牲一些精度。
+
+    校准过程：
+        两者都需要校准，但校准的数据和目标可能不同，因为它们优化的是不同的数据类型。
+    
+    kv cache:
+        是一种缓存技术，通过存储键值对的形式来复用计算结果，以达到提高性能和降低内存消耗的目的。
+
+<br>不使用LlamaIndex:
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2010-52-40.png "2024-11-20%2010-52-40.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+  
+使用LlamaIndex:
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2016-23-28.png "2024-11-20%2016-23-28.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+### 2 (选做）本地InternLM+LlamaIndex: 
+
+
+因为没有开发机gpu配额，无法创建30% A100的开发机，10% A100无法加载模型
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+### 3 （优秀学员）Streamlit+LlamaIndex+API部署HuggingFace: 
+
+
+在Huggingface中创建了名为InternLM_api_llamaindex_RAG的space，并git clone到开发机<br>
+把app.py,data复制到仓库中
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-42-15.png "2024-11-20%2021-42-15.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+编写requirements.txt
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-42-31.png "2024-11-20%2021-42-31.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+git push到space
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-43-08.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+Running
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-43-50.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
