--- a/进阶关卡——第3关作业.md
+++ b/进阶关卡——第3关作业.md
@@ -24,18 +24,18 @@
     kv cache:
         是一种缓存技术，通过存储键值对的形式来复用计算结果，以达到提高性能和降低内存消耗的目的。
 
-<br>不使用LlamaIndex:
+<br>启动W4A16量化:
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2010-52-40.png "2024-11-20%2010-52-40.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-28%2021-37-18.png "2024-11-20%2010-52-40.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
   
-使用LlamaIndex:
+量化后的InternLM2.5_1.8B_chat减少2.5GB的文件大小:
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2016-23-28.png "2024-11-20%2016-23-28.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-28%2022-35-12.png "2024-11-20%2016-23-28.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
