--- a/进阶关卡——第3关作业.md
+++ b/进阶关卡——第3关作业.md
@@ -2,10 +2,8 @@
 # 进阶关卡——第3关作业
 
     
-## 基础任务：
-### 1 ：<br>   W4A16量化与kv cache量化的internlm2_5-1_8b-chat模型封装本地API并与大模型进行一次对话
-
-
+## 基础任务：4A16量化与kv cache量化的internlm2_5-1_8b-chat模型封装本地API并与
+### 
 
     应用场景：
         KV Cache int4/int8量化主要用于优化KV Cache结构中的键和值的存储和访问。
@@ -24,6 +22,13 @@
     kv cache:
         是一种缓存技术，通过存储键值对的形式来复用计算结果，以达到提高性能和降低内存消耗的目的。
 
+<br>量化前lmdepoly chat的显存占用:
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-29%2014-23-23.png "2024-11-20%2010-52-40.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------  
+  
 <br>启动W4A16量化:
   
 ![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-28%2021-37-18.png "2024-11-20%2010-52-40.png")
@@ -41,50 +46,46 @@
 -------------------------------------------------------------------------------------------------------------------
 
 
-### 2 (选做）本地InternLM+LlamaIndex: 
+lmdepoly chat 验证启动模型查看显存占用: 
 
-
-因为没有开发机gpu配额，无法创建30% A100的开发机，10% A100无法加载模型
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-29%2010-44-36.png "2024-11-20%2016-23-28.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-### 3 （优秀学员）Streamlit+LlamaIndex+API部署HuggingFace: 
-
-
-在Huggingface中创建了名为InternLM_api_llamaindex_RAG的space，并git clone到开发机<br>
-把app.py,data复制到仓库中
+使用lmdeploy启动本地模型api服务 + KV Cache int4 + KV Cache：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-42-15.png "2024-11-20%2021-42-15.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-29%2011-31-58.png "2024-11-20%2021-42-15.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-编写requirements.txt
+新建终端，使用Gradio作为前端，启动网页：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-42-31.png "2024-11-20%2021-42-31.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-git push到space
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-43-08.png "2024-11-20%2021-43-08.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-29%2011-35-09.png "2024-11-20%2021-42-31.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-Running
+在浏览器中与本地模型交互：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-20%2021-43-50.png "2024-11-20%2021-43-50.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-29%2011-35-50.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+查看显存：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-29%2011-40-13.png "2024-11-20%2021-43-50.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
