--- a/进阶关卡——第3关作业.md
+++ b/进阶关卡——第3关作业.md
@@ -2,7 +2,7 @@
 # 进阶关卡——第3关作业
 
     
-## 基础任务：4A16量化与kv cache量化的internlm2_5-1_8b-chat模型封装本地API并与
+## 任务1：4A16量化与kv cache量化的internlm2_5-1_8b-chat模型封装本地API并与
 ### 
 
     应用场景：
@@ -86,6 +86,36 @@ lmdepoly chat 验证启动模型查看显存占用:
 
   
 ![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-29%2011-40-13.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+## 任务2: 使用Function call
+###
+
+启动api服务：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-29%2015-08-27.png "2024-11-20%2021-42-31.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+使用function call：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-29%2015-08-50.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+输出结果：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-29%2015-09-48.png "2024-11-20%2021-43-50.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
