--- a/基础关卡——第6关作业.md
+++ b/基础关卡——第6关作业.md
@@ -15,7 +15,7 @@
 -------------------------------------------------------------------------------------------------------------------
 
   
-启动微调：
+配置数据集：
 
   
 ![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc2.png "2024-11-20%2016-23-28.png")
@@ -24,10 +24,10 @@
 -------------------------------------------------------------------------------------------------------------------
 
 
-因为把max_length=4096,batch_size=3导致了内存溢出：
+运行run.py：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2011-10-31.png "2024-11-20%2021-42-15.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc3.png "2024-11-20%2021-42-15.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
