--- a/基础关卡——第6关作业.md
+++ b/基础关卡——第6关作业.md
@@ -2,9 +2,9 @@
 # 基础关卡——第6关作业
 
     
-## 基础任务：
+## 基础任务
 
-### 使用 OpenCompass 评测浦语 API：
+### 1：使用 OpenCompass 评测浦语 API
 
 配置模型 ：
 
@@ -33,101 +33,90 @@
 -------------------------------------------------------------------------------------------------------------------
 
 
-max_length=2048,batch_size=2微调成功：
+评测结果：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/blob/main/images/2024-11-23%2011-16-58.png "2024-11-20%2021-42-31.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-微调完成：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2017-28-07.png "2024-11-20%2021-43-08.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc4.png "2024-11-20%2021-42-31.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-权重转换：
+### 2：使用 OpenCompass 评测 internlm2.5-chat-1.8b 模型在 ceval 数据集上的性能
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-34-01.png "2024-11-20%2021-42-31.png")
+下载ceval数据集，然后配置本地模型：
 
   
--------------------------------------------------------------------------------------------------------------------
-
-
-得到huggingface格式的权重文件
-
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-33-39.png "2024-11-20%2021-42-15.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc6.png "2024-11-20%2021-43-08.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-模型合并，将微调得到的adapter层跟原模型文件合并：
+运行测试：
 
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-41-44.png "2024-11-20%2021-43-08.png")
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc7.png "2024-11-20%2021-42-31.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-修改xtuner_streamlit_demo.py：
+测试结果：
 
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-44-20.png "2024-11-20%2021-43-50.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-运行：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2023-26-31.png "2024-11-20%2021-43-50.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc8.png "2024-11-20%2021-42-15.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-## 进阶任务：
+## 进阶任务
 
-
-
-创建模型仓库和space，并clone到开发机
+### 1：使用 OpenCompass 评测 InternLM2-Chat-1.8B 模型使用 LMDeploy部署后在 ceval 数据集上的性能
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2022-15-47.png "2024-11-20%2021-42-31.png")
+使用lmdeploy W4A16权重量化：
 
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-上传模型文件：
-
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-59-29.png "2024-11-20%2021-42-15.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc9.png "2024-11-20%2021-43-08.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-修改streamlit文件的模型路径<br>from transformer import AutoTokenizer,AutoModelForCausalLM<br>
-模型路径为“hf_usrname/model_name”
+lmdeploy API部署量化后的InternLM2-Chat-1.8B：
 
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-55-49.png "2024-11-20%2021-43-08.png")
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc10.png "2024-11-20%2021-43-50.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-git push到space<br>build and deploy<br>没有gpu导致runtime error,gpu需要美元，没有美元。。。
+配置opencompass测试模型：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-58-10.png "2024-11-20%2021-43-50.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc11.png "2024-11-20%2021-43-50.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
+
+
+启动测试：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc12.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+测试结果：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc13.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
