--- a/基础关卡——第6关作业.md
+++ b/基础关卡——第6关作业.md
@@ -73,7 +73,35 @@
 
 ## 进阶任务
 
-### 1：使用 OpenCompass 评测 InternLM2-Chat-1.8B 模型使用 LMDeploy部署后在 ceval 数据集上的性能
+### 1：使用 OpenCompass 进行主观评测
+  
+自定义数据集：
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-30%2021-38-19.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+启动测试：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-30%2021-39-33.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+测试结果：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-30%2021-39-49.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+  
+### 2：使用 OpenCompass 评测 InternLM2-Chat-1.8B 模型使用 LMDeploy部署后在 ceval 数据集上的性能
 
   
 使用lmdeploy W4A16权重量化：
