--- a/基础关卡——第3关作业.md
+++ b/基础关卡——第3关作业.md
@@ -1,71 +1,33 @@
 
-# 基础关卡——第6关作业
+# 基础关卡——第3关作业
 
     
 ## 基础任务
 
-### 1：使用 OpenCompass 评测浦语 API
+### 1:引导语言模型正确回答出“strawberry”中有几个字母“r”
 
-配置模型 ：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc1.png "2024-11-20%2010-52-40.png")
+使用提示词之前，错误数出r的个数 ：
 
   
--------------------------------------------------------------------------------------------------------------------
-
-  
-配置数据集：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc2.png "2024-11-20%2016-23-28.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-04%2020-54-11.png "2024-11-20%2010-52-40.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
-
-运行run.py：
+  
+编写提示词：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc3.png "2024-11-20%2021-42-15.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-04%2020-54-41.png "2024-11-20%2016-23-28.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-评测结果：
+正确数出r的个数：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc4.png "2024-11-20%2021-42-31.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-### 2：使用 OpenCompass 评测 internlm2.5-chat-1.8b 模型在 ceval 数据集上的性能
-
-  
-下载ceval数据集，然后配置本地模型：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc6.png "2024-11-20%2021-43-08.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-运行测试：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc7.png "2024-11-20%2021-42-31.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-测试结果：
-
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc8.png "2024-11-20%2021-42-15.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-04%2020-54-27.png "2024-11-20%2021-42-15.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
@@ -73,76 +35,49 @@
 
 ## 进阶任务
 
-### 1：使用 OpenCompass 进行主观评测
+### 1：公文写作助手
   
-自定义数据集：
-
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-30%2021-38-19.png "2024-11-20%2021-43-08.png")
+使用提示词前：
 
   
--------------------------------------------------------------------------------------------------------------------
-
-
-启动测试：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-30%2021-39-33.png "2024-11-20%2021-43-50.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-04%2021-41-15.png "2024-11-20%2021-43-08.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-测试结果：
+编写提示词：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-30%2021-39-49.png "2024-11-20%2021-43-50.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-  
-### 2：使用 OpenCompass 评测 InternLM2-Chat-1.8B 模型使用 LMDeploy部署后在 ceval 数据集上的性能
-
-  
-使用lmdeploy W4A16权重量化：
-
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc9.png "2024-11-20%2021-43-08.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-04%2021-41-31.png "2024-11-20%2021-42-31.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-lmdeploy API部署量化后的InternLM2-Chat-1.8B：
+使用提示词后写出的商务邮件，更能表达合作意愿，更明确的会议目的，更专业的商业素养：
 
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc10.png "2024-11-20%2021-43-50.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-配置opencompass测试模型：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc11.png "2024-11-20%2021-43-50.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-04%2021-41-42.png "2024-11-20%2021-42-15.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-启动测试：
+### 2：MBTI 性格测试
+  
+编写提示词：
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-04%2021-48-04.png "2024-11-20%2021-43-08.png")
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc12.png "2024-11-20%2021-43-50.png")
+-------------------------------------------------------------------------------------------------------------------
+
+
+使用提示词后直接开始了MBTI性格测试：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-04%2021-48-21.png "2024-11-20%2021-43-50.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
-
-测试结果：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/oc13.png "2024-11-20%2021-43-50.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
