--- a/基础关卡——第1关作业.md
+++ b/基础关卡——第1关作业.md
@@ -1,4 +1,4 @@
-核心技术思路
+## 核心技术思路
 
 高质量合成数据
 
@@ -7,11 +7,11 @@
 基于模型的数据扩充
 
 基于反馈的数据生成
-解决用户需求思路
+## 解决用户需求思路
 
 用户需求——>问题分析——>思路路径拆解——>内容整合——>问题回复（多智能体协作、网页）
 
-书生·浦语开源模型谱系
+## 书生·浦语开源模型谱系
 
 InternLM：
 
@@ -23,4 +23,43 @@ InternLM：
 
         “102B 性能强大的闭源模型，典型场景表现接近GPT-4”
 
-InternLM-XComposer（灵笔）、InternLM-Math（数学） InternLM-WQX（文曲星）
+InternLM-XComposer（灵笔
+
+InternLM-Math（数学
+
+InternLM-WQX（文曲星）
+
+数据：书生·万卷
+
+预训练：InternEvo（大规模训练，支持千卡、性能优化、软硬件生态良好、预训练+微调+RLHF全场景覆盖）
+
+微调：XTuner（支持多种微调和偏好对齐算法，自动优化加速，适配多种硬件，能够处理千亿+百万下文的数据）
+
+应用：MindSearch（思索式开源搜索应用）、Lagent（首个支持代码解释器的智能体框架）、MinerU（文档解析工具）、HuixiangDou（基于专业知识的群聊助手）
+
+评测：OpenCompass（广泛应用于头部大模型企业和科研机构）（工具-基准-榜单）
+
+部署：LMDeploy部署工具
+
+
+## 书生大模型的应用场景
+
+书生大模型的应用场景非常广泛，包括：
+
+    文本生成: 可以生成各种文本，例如新闻、小说、诗歌、剧本等。
+
+    翻译: 可以进行多种语言之间的翻译。
+
+    问答: 可以回答各种问题，例如事实问题、概念问题、理解问题等。
+
+    代码生成: 可以生成各种编程语言的代码。
+
+    智能客服: 可以用于构建智能客服系统，为用户提供高效便捷的服务。
+
+    教育: 可以用于构建智能教育系统，为学生提供个性化的学习体验。
+
+    医疗: 可以用于构建智能医疗系统，为医生提供诊断和治疗的辅助。
+
+## 总结
+
+书生大模型全链路开源开放体系是一个强大的工具，它为研究人员和开发者提供了一个完整的、可扩展的、易于使用的平台，用于构建和部署大模型应用程序。该体系的开源开放性为大模型的研究和应用提供了良好的基础，预计未来将会有更多基于该体系的创新应用出现。
