--- a/进阶关卡——第2关作业.md
+++ b/进阶关卡——第2关作业.md
@@ -1,1 +1,134 @@
 
+
+# 进阶关卡——第2关作业
+
+    
+## 任务1：
+### 使用 Lagent 复现文档中 “制作一个属于自己的Agent” 和 “Multi-Agents博客写作系统的搭建”两部分内容，记录复现过程并截图。
+
+
+按照教程配置环境，准备数据，模型，然后修改config文件：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2010-50-52.png "2024-11-20%2010-52-40.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+  
+启动微调：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2010-51-16.png "2024-11-20%2016-23-28.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+因为把max_length=4096,batch_size=3导致了内存溢出：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2011-10-31.png "2024-11-20%2021-42-15.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+max_length=2048,batch_size=2微调成功：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/blob/main/images/2024-11-23%2011-16-58.png "2024-11-20%2021-42-31.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+微调完成：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2017-28-07.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+权重转换：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-34-01.png "2024-11-20%2021-42-31.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+得到huggingface格式的权重文件
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-33-39.png "2024-11-20%2021-42-15.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+模型合并，将微调得到的adapter层跟原模型文件合并：
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-41-44.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+修改xtuner_streamlit_demo.py：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-44-20.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+运行：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2023-26-31.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+## 进阶任务：
+
+
+
+创建模型仓库和space，并clone到开发机
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2022-15-47.png "2024-11-20%2021-42-31.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+上传模型文件：
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-59-29.png "2024-11-20%2021-42-15.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+修改streamlit文件的模型路径<br>from transformer import AutoTokenizer,AutoModelForCausalLM<br>
+模型路径为“hf_usrname/model_name”
+
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-55-49.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+git push到space<br>build and deploy<br>没有gpu导致runtime error,gpu需要美元，没有美元。。。
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-58-10.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
