--- a/进阶关卡——第2关作业.md
+++ b/进阶关卡——第2关作业.md
@@ -7,28 +7,27 @@
 ### 使用 Lagent 复现文档中 “制作一个属于自己的Agent” 和 “Multi-Agents博客写作系统的搭建”两部分内容，记录复现过程并截图。
 
 
-按照教程配置环境，准备数据，模型，然后修改config文件：
-
+使用和风天气服务获取他们的api_key并添加到环境变量，创建lagent中新的action用于查询天气信息，然后在_init_.py中初始化WeatherQuery方法：
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2010-50-52.png "2024-11-20%2010-52-40.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-  
-启动微调：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2010-51-16.png "2024-11-20%2016-23-28.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-12%2014-13-46.png "2024-11-20%2010-52-40.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
-
-因为把max_length=4096,batch_size=3导致了内存溢出：
+  
+在demo.py中引入WeatherQuery方法，在插件初始化列表中添加WeatherQuery
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2011-10-31.png "2024-11-20%2021-42-15.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-12%2014-15-42.png "2024-11-20%2016-23-28.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+运行demo：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-12%2014-20-40.png "2024-11-20%2021-42-15.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
