--- a/进阶关卡——第4关作业.md
+++ b/进阶关卡——第4关作业.md
@@ -17,7 +17,7 @@
 -------------------------------------------------------------------------------------------------------------------
 
   
-启动微调：
+### 了解InternVL2的设计模式，可以大概描述InternVL2的模型架构和训练流程：
 
   
 ![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2010-51-16.png "2024-11-20%2016-23-28.png")
@@ -26,110 +26,87 @@
 -------------------------------------------------------------------------------------------------------------------
 
 
-因为把max_length=4096,batch_size=3导致了内存溢出：
+### 了解LMDeploy部署多模态大模型的核心代码，并运行提供的gradio代码，在UI界面体验与InternVL2的对话：
+
+
+按照教程配置环境，运行demo,与InternVL2交互：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2011-10-31.png "2024-11-20%2021-42-15.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-max_length=2048,batch_size=2微调成功：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/blob/main/images/2024-11-23%2011-16-58.png "2024-11-20%2021-42-31.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-12%2019-27-54.png "2024-11-20%2021-42-15.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-微调完成：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2017-28-07.png "2024-11-20%2021-43-08.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
+微调前，错把肠粉认成叉烧：
 
 
-权重转换：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-34-01.png "2024-11-20%2021-42-31.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-14%2010-07-15.png "2024-11-20%2021-42-31.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-得到huggingface格式的权重文件
+### 了解XTuner，并利用给定数据集微调InternVL2-2B后，再次启动UI界面，体验模型美食鉴赏能力的变化:
 
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-33-39.png "2024-11-20%2021-42-15.png")
+
+在xtuner/xtuner/config中添加InternVL2-2B微调的配置文件：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-12%2020-05-49.png "2024-11-20%2021-43-08.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-模型合并，将微调得到的adapter层跟原模型文件合并：
+启动微调：
 
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-41-44.png "2024-11-20%2021-43-08.png")
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-12%2020-37-18.png "2024-11-20%2021-42-31.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-修改xtuner_streamlit_demo.py：
+内存溢出，超出30%A100显存两倍左右：
 
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2022-44-20.png "2024-11-20%2021-43-50.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-运行：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2023-26-31.png "2024-11-20%2021-43-50.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-12%2021-03-19.png "2024-11-20%2021-42-15.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-## 进阶任务：
+修改config文件中的bitch_size从4改为2，微调完成：
 
-
-
-创建模型仓库和space，并clone到开发机
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2022-15-47.png "2024-11-20%2021-42-31.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-13%2021-23-49.png "2024-11-20%2021-43-08.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-上传模型文件：
+借助已有的权重文件转换脚本，把.pth格式的权重文件转换为.safetensors：
 
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-59-29.png "2024-11-20%2021-42-15.png")
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-13%2021-44-22.png "2024-11-20%2021-43-50.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-修改streamlit文件的模型路径<br>from transformer import AutoTokenizer,AutoModelForCausalLM<br>
-模型路径为“hf_usrname/model_name”
+修改demo.py中模型的路径，然后运行：
 
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-55-49.png "2024-11-20%2021-43-08.png")
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-13%2021-49-43.png "2024-11-20%2021-43-50.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-git push到space<br>build and deploy<br>没有gpu导致runtime error,gpu需要美元，没有美元。。。
+微调后的模型成功识别了肠粉：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-24%2021-58-10.png "2024-11-20%2021-43-50.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-14%2010-15-06.png "2024-11-20%2021-42-31.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
+
